
  new plugin auth_vpopmaild (Robin Bowes)

  new plugin auth_checkpassword (Matt Simerson)

  auth_vpopmail_sql: more flexible db config (Matt Simerson)

  new plugin check_bogus_bounce (Steve Kemp)

  clamav: added ClamAV version to the X-Virus-Checked header, 
  as well as noting "no virus found".  (Matt Simerson)

  assorted documentation cleanups (Steve Kemp, Robert Spier)

0.84 April 7, 2010

  uribl: fix scan-headers option (Jost Krieger, Robert Spier)

  exim: Use BSMTP response codes, various cleanups (Devin Carraway)

  config: cache returned values from config plugins (Peter J. Holzer)

  AUTH PLAIN bug with Alpine (Rick Richard)

  require_resolvable_fromhost: Moved DENYSOFT for temp_resolver_failed
  to the RCPT TO hook. (Larry Nedry)

  Note Net::IP dependency (Larry Nedry)

  Various minor spelling cleanups and such (Steve Kemp, Devin Carraway) 

  rpm: create .rpm files from the packaging/rpm directory (Peter J. Holzer,
  Robin Bowes, Filippo Carletti, Richard Siddell)

  spamassasin: Custom spam tag subject munging (Jonathan Martens, Robert Spier)

  clamav: Fix typo in name of default configuration file (Filippo Carletti)


0.83 September 15, 2009

  plugins/queue/maildir: Allow hyphens in the maildir path (Hinrik Örn Sigurðsson)

  Modify plugins/virus/clamav no-summary option for ClamAV 0.95 (Jonathan Martens)

  Temporary deny if clamd is not running (Shad L. Lords)

  Fix spamassassin plugin log noise if spam score is 0.0

  Fix spool_dir configuration documentation and README update (Tomas Lee)

  Disconnect host in rhsbl (Charlie Brady)

  POD cleanups (Steve Kemp)

  check_badmailfrom: Fix parsing of reason messages etc (Robert Spier, Tomas Lee)

  check_spamhelo disconnects after denying a 'helo' (Filippo Carletti)

  Log even when aren't in a transaction (Jared Johnson)

  prefork: More robust child spawning (Peter Samuelson)

  Add dup_body_fh method to return a dup'd body FH (Jared Johnson)


0.82 - June 2, 2009
